fix issue where random images were running off screen

--- a/style.css
+++ b/style.css
@@ -34,6 +34,10 @@ https://cssbuttons.io/detail/ke1221/ancient-walrus-24
     display: none;
 }
 
+/* #button-area-top, #button-area-bottom {
+
+} */
+
 button, .upload-label {
     margin: 1.5rem;
     border: 1px solid #e8e8e8;
